# Badwolfie-utils

./: .clang-format  .gitignore  ChangeLog  LICENSE  Makefile  Makefile.am  README.md  autogen.sh  bdw-utils.c  bdw-utils.h  bdwlib-1.0.pc.in  bdwlib.doap  configure.ac  index.html
bdwlib/: Makefile.am  bdw-array.c  bdw-array.h  bdw-bytearray.c  bdw-bytearray.h  bdw-error.c  bdw-error.h  bdw-file.c  bdw-file.h  bdw-inet-client.c  bdw-inet-client.h  bdw-inet-server.c  bdw-inet-server.h  bdw-inet.c  bdw-inet.h  bdw-internet-client.c  bdw-internet-client.h  bdw-internet-server.c  bdw-internet-server.h  bdw-internet.c  bdw-internet.h  bdw-list.c  bdw-list.h  bdw-macros.h  bdw-memory.c  bdw-memory.h  bdw-queue.c  bdw-queue.h  bdw-simple-list.c  bdw-simple-list.h  bdw-stack.c  bdw-stack.h  bdw-static-queue.c  bdw-static-queue.h  bdw-static-stack.c  bdw-static-stack.h  bdw-string-utils.c  bdw-string-utils.h  bdw-string.c  bdw-string.h  (+10 more)
docs/: api-index-full.html  bdwlib-BdwLib-data-types.html  bdwlib-Doubly-Linked-Lists.html  bdwlib-File-utilities.html  bdwlib-Singly-Linked-Lists.html  bdwlib-String-utilities.html  bdwlib-bdw-array.html  bdwlib-bdw-bytearray.html  bdwlib-bdw-error.html  bdwlib-bdw-string.html  bdwlib-bdw-tcp-client.html  bdwlib-bdw-utils.html  bdwlib-bdw-version.html  bdwlib.devhelp2  ch01.html  deprecated-api-index.html  index.html  object-tree.html
docs/reference/: Makefile.am
docs/reference/bdwlib/: .gitignore  Makefile.am  version.xml.in
